add invitation seller view

--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -6,7 +6,7 @@
 
 		<div class="grid-container u-margin-top-20">
 			<div class="grid-100">
-				<p class="account-title"><i class="fa fa-caret-down"></i>Abre tu tienda en línea</p>
+				<p class="account-title"><i class="fa fa-caret-down"></i>Pedidos Abiertos</p>
 			</div>
 		</div>
 
@@ -16,20 +16,331 @@
 					{% include '../../partials/account-menu.html' %}
 				{% endif %}
 
-				<div class="am-profile-box grid-container u-margin-top-20" style="float: right; max-width: 880px !important; width: 100%;">
+				<div class="am-profile-box grid-container u-margin-top-20" style="float: right; max-width: 880px !important;">
 					<form class="complete-form">
 
-						<div class="invitation-cover" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458957539/general/vende_en_internet.png');">
+						<p class="open-seller-main-title">Envíos abiertos</p>
 
+						<p class="u-separator u-margin-bottom-20" style="background: #979797;"></p>
+
+						<div class="open-seller-item">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
+							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
+								<p class="information-left-description">
+									VENTA DE OBRA ORIGINAL <br>
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
+								</p>
+							</div>
+							<div class="information-center">
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
+								<br>
+								<p> <a href="#">Ficha de envío</a> </p>
+							</div>
+							<div class="information-right">
+								<div class="table">
+									<div class="left">
+										<p class="green">tu ganancia:</p>
+										<p>comisión am</p>
+										<p class="bold">subtotal:</p>
+										<p>shipping:</p>
+										<p>impuestos:</p>
+										<p class="bold">total:</p>
+									</div>
+									<div class="right">
+										<p class="green">USD 70.00</p>
+										<p>USD 30.00</p>
+										<p class="bold">USD 100.00</p>
+										<p>USD 25.00</p>
+										<p>USD 25.00</p>
+										<p class="bold">USD 150.00</p>
+									</div>
+								</div>
+								<br>
+								<a href="">Detalle Invoice</a>
+							</div>
 						</div>
 
-						<p class="invitation-title">Crea tu tienda en línea en 3 pasos</p>
+						<p class="open-seller-secondary-title">Acción a realizar:</p>
 
-						<p class="invitation-subTitle">Ahora hacemos muy fácil el que puedas vender tu arte por internet</p>
+						<div class="open-seller-box">
+							<span class="number">1</span>
+							<p>¿Tienes a la mano tu obra ó puedes conseguirla?</p>
+							<span class="icon"><i class="fa fa-info"></i></span>
+							<a href="#" class="seller-button small green">SI</a>
+							<a href="#" class="seller-button small red">NO</a>
+						</div>
 
-						<a class="invitation-button" href="">CREAR TIENDA</a>
+						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
 
-						<p class="invitation-subTitle underline">¿Cómo funciona la tienda?</p>
+						<div class="open-seller-item">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
+							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
+								<p class="information-left-description">
+									VENTA DE OBRA ORIGINAL <br>
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
+								</p>
+							</div>
+							<div class="information-center">
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
+								<br>
+								<p> <a href="#">Ficha de envío</a> </p>
+							</div>
+							<div class="information-right">
+								<div class="table">
+									<div class="left">
+										<p class="green">tu ganancia:</p>
+										<p>comisión am</p>
+										<p class="bold">subtotal:</p>
+										<p>shipping:</p>
+										<p>impuestos:</p>
+										<p class="bold">total:</p>
+									</div>
+									<div class="right">
+										<p class="green">USD 70.00</p>
+										<p>USD 30.00</p>
+										<p class="bold">USD 100.00</p>
+										<p>USD 25.00</p>
+										<p>USD 25.00</p>
+										<p class="bold">USD 150.00</p>
+									</div>
+								</div>
+								<br>
+								<a href="">Detalle Invoice</a>
+							</div>
+						</div>
+
+						<div class="open-seller-box">
+							<span class="number">2</span>
+							<p>Empaca bien tu arte y confirma, <a href="">mira nuestra guía de empaque</a></p>
+							<span class="icon"><i class="fa fa-info"></i></span>
+							<a href="#" class="seller-button">LISTO</a>
+						</div>
+
+						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
+
+						<div class="open-seller-item">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
+							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
+								<p class="information-left-description">
+									VENTA DE OBRA ORIGINAL <br>
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
+								</p>
+							</div>
+							<div class="information-center">
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
+								<br>
+								<p> <a href="#">Ficha de envío</a> </p>
+							</div>
+							<div class="information-right">
+								<div class="table">
+									<div class="left">
+										<p class="green">tu ganancia:</p>
+										<p>comisión am</p>
+										<p class="bold">subtotal:</p>
+										<p>shipping:</p>
+										<p>impuestos:</p>
+										<p class="bold">total:</p>
+									</div>
+									<div class="right">
+										<p class="green">USD 70.00</p>
+										<p>USD 30.00</p>
+										<p class="bold">USD 100.00</p>
+										<p>USD 25.00</p>
+										<p>USD 25.00</p>
+										<p class="bold">USD 150.00</p>
+									</div>
+								</div>
+								<br>
+								<a href="">Detalle Invoice</a>
+							</div>
+						</div>
+
+						<div class="open-seller-box">
+							<span class="number">3</span>
+							<p>Imprime la <a href="#">ficha de envío</a> y pégala al empaque</p>
+							<span class="icon"><i class="fa fa-info"></i></span>
+							<a href="#" class="seller-button">LISTO</a>
+						</div>
+
+						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
+
+						<div class="open-seller-item">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
+							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
+								<p class="information-left-description">
+									VENTA DE OBRA ORIGINAL <br>
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
+								</p>
+							</div>
+							<div class="information-center">
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
+								<br>
+								<p> <a href="#">Ficha de envío</a> </p>
+							</div>
+							<div class="information-right">
+								<div class="table">
+									<div class="left">
+										<p class="green">tu ganancia:</p>
+										<p>comisión am</p>
+										<p class="bold">subtotal:</p>
+										<p>shipping:</p>
+										<p>impuestos:</p>
+										<p class="bold">total:</p>
+									</div>
+									<div class="right">
+										<p class="green">USD 70.00</p>
+										<p>USD 30.00</p>
+										<p class="bold">USD 100.00</p>
+										<p>USD 25.00</p>
+										<p>USD 25.00</p>
+										<p class="bold">USD 150.00</p>
+									</div>
+								</div>
+								<br>
+								<a href="">Detalle Invoice</a>
+							</div>
+						</div>
+
+						<div class="open-seller-box">
+							<span class="number">4</span>
+							<p>Lleva el paquete al courrier, paga el envío(luego te lo devolvermos) y confirma</p>
+							<span class="icon"><i class="fa fa-info"></i></span>
+							<a href="#" class="seller-button">SUBIR VOUCHER</a>
+						</div>
+
+						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
+
+						<div class="open-seller-item">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
+							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
+								<p class="information-left-description">
+									VENTA DE OBRA ORIGINAL <br>
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
+								</p>
+							</div>
+							<div class="information-center">
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
+								<br>
+								<p> <a href="#">Ficha de envío</a> </p>
+							</div>
+							<div class="information-right">
+								<div class="table">
+									<div class="left">
+										<p class="green">tu ganancia:</p>
+										<p>comisión am</p>
+										<p class="bold">subtotal:</p>
+										<p>shipping:</p>
+										<p>impuestos:</p>
+										<p class="bold">total:</p>
+									</div>
+									<div class="right">
+										<p class="green">USD 70.00</p>
+										<p>USD 30.00</p>
+										<p class="bold">USD 100.00</p>
+										<p>USD 25.00</p>
+										<p>USD 25.00</p>
+										<p class="bold">USD 150.00</p>
+									</div>
+								</div>
+								<br>
+								<a href="">Detalle Invoice</a>
+							</div>
+						</div>
+
+						<div class="open-seller-box">
+							<span class="number check"><i class="fa fa-check"></i></span>
+							<p>Listo! La obra debe estar por llegar a su destino, te avisaremos cuando </p>
+						</div>
 
 					</form>
 				</div>
