--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -12,30 +12,9 @@
 
 		<div class="grid-container">
 			<div class="grid-100">
-				<div class="am-Filter account mobile u-margin-top-10">
-					<div class="am-Filter-item">
-						<header class="am-Filter-header">
-							<i class="bi_user-single-a"></i><p>Mi cuenta</p>
-						</header>
-					</div>
-					<div class="am-Filter-item">
-						<ul class="am-Filter-subOptions">
-							<a href="/user/{{user.username}}/account/">Mis datos de perfil</a>
-							<a href="/user/{{user.username}}/account/password" class="selected">Cambiar contraseña</a>
-							<!-- <a href="#">Administración de cuenta</a> -->
-						</ul>
-					</div>
-					<!-- <div class="am-Filter-item">
-						<header class="am-Filter-header">
-							<i class="fa fa-bars"></i><p>Tienda en línea</p>
-						</header>
-					</div>
-					<div class="am-Filter-item">
-						<ul class="am-Filter-subOptions">
-							<a href="#">Quiero abrir mi tienda</a>
-						</ul>
-					</div> -->
-				</div>
+				{% if !context %}
+					{% include '../../partials/account-menu.html' %}
+				{% endif %}
 
 				<div class="am-profile-box grid-container u-margin-top-20">
 					<form class="password-form">
@@ -66,6 +45,7 @@
 		var profile = {{profile|json|safe}};
 
 		$(function() {
+			$('.password').addClass('selected');
 			new APP.AccountPasswordScreen();
 			$('.account-title').click(function () {
 				$('.am-Filter.account.mobile').toggleClass('visible')
