--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -2,7 +2,7 @@
 
 {% block elements %}
 
-	<a class="sales-button white create-btn">CREAR</a>
+	<!-- <a class="sales-button white create-btn">CREAR</a> -->
 
 	<div class="grid-container">
 		<div class="grid-100">
@@ -49,7 +49,7 @@
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
 					<div class="buttons">
-						<a class="sales-button white" href="#">EDITAR</a>
+						<a class="sales-button white edit-btn" href="#">EDITAR</a>
 						<a class="sales-button blue" href="#">ACTIVAR</a>
 					</div>
 				</div>
@@ -60,7 +60,7 @@
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
 					<div class="buttons">
-						<a class="sales-button white" href="#">EDITAR</a>
+						<a class="sales-button white edit-btn" href="#">EDITAR</a>
 						<a class="sales-button blue" href="#">ACTIVAR</a>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
 					<div class="buttons">
-						<a class="sales-button white" href="#">EDITAR</a>
+						<a class="sales-button white edit-btn" href="#">EDITAR</a>
 						<a class="sales-button blue" href="#">ACTIVAR</a>
 					</div>
 				</div>
@@ -80,7 +80,7 @@
 	</div>
 
 	<!-- SALES 1 -->
-	<div class="grid-container">
+	<div class="grid-container grid-1 hide">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458849903/general/fondo_prints_galeri%CC%81a.png');">
@@ -131,9 +131,9 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<!-- SALES 2 -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
@@ -154,7 +154,7 @@
 					<p class="subtitle">
 						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
 					</p>
-					
+
 					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
 						<tr>
 							<td><p class="title">TIPO DE PRINT</p></td>
@@ -250,10 +250,10 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- SALES 3 -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -274,7 +274,7 @@
 					<p class="subtitle">
 						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
 					</p>
-					
+
 					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
 						<tr>
 							<td><p class="title">TIPO DE PRINT</p></td>
@@ -310,7 +310,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="grid-container">
 		<div class="grid-100 grid-parent">
@@ -323,7 +323,7 @@
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
 					<div class="buttons">
-						<a class="sales-button white" href="#">EDITAR</a>
+						<a class="sales-button white edit-btn" href="#">EDITAR</a>
 						<a class="sales-button blue" href="#">ACTIVAR</a>
 					</div>
 				</div>
@@ -334,7 +334,7 @@
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
 					<div class="buttons">
-						<a class="sales-button white" href="#">EDITAR</a>
+						<a class="sales-button white edit-btn" href="#">EDITAR</a>
 						<a class="sales-button blue" href="#">ACTIVAR</a>
 					</div>
 				</div>
@@ -345,7 +345,7 @@
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
 					<div class="buttons">
-						<a class="sales-button white" href="#">EDITAR</a>
+						<a class="sales-button white edit-btn" href="#">EDITAR</a>
 						<a class="sales-button blue" href="#">ACTIVAR</a>
 					</div>
 				</div>
@@ -354,7 +354,7 @@
 	</div>
 
 	<!-- SALES 4 -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
@@ -392,7 +392,7 @@
 					</div>
 
 					<p class="subtitle" style="margin-bottom: 0;">Centrar diseño:</p>
-					
+
 					<div class="aligns">
 						<a href="" class="sales-button white">VERTICAL</a>
 						<a href="" class="sales-button white">HORIZONTAL</a>
@@ -404,10 +404,10 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- SALES 5 -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -448,7 +448,7 @@
 					</div>
 
 					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
-					
+
 					<div class="aligns" style="margin-bottom: 0;">
 						<a href="" class="sales-button white">VERTICAL</a>
 						<a href="" class="sales-button white">HORIZONTAL</a>
@@ -468,10 +468,10 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- SALES 6 -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458849903/general/fondo_prints_galeri%CC%81a.png');">
@@ -502,15 +502,15 @@
 
 					<p class="title">Cálculo de ganancias</p>
 
-					<!-- <div class="checks">
+					<div class="checks">
 						<input class="check" type="checkbox" name="package-type"></input>
 						<label class="label-check">Empaque en tubo</label>
 
 						<input class="check" type="checkbox" name="package-type"></input>
 						<label class="label-check">Empaque en caja</label>
-					</div> -->
+					</div>
 
-					
+
 					<table class="prices u-margin-top-20">
 						<tr>
 							<td><p class="text">Precio base (ganancia del artista)</p></td>
@@ -545,10 +545,10 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- PHONE CASES: EDICIÓN -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -598,7 +598,7 @@
 					</div>
 
 					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
-					
+
 					<div class="aligns" style="margin-bottom: 0;">
 						<a href="" class="sales-button white">VERTICAL</a>
 						<a href="" class="sales-button white">HORIZONTAL</a>
@@ -610,9 +610,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- PHONE CASES: CONDICIONES -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -633,7 +633,7 @@
 					<p class="subtitle">
 						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
 					</p>
-					
+
 					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
 						<tr>
 							<td><p class="title">TIPO DE PRINT</p></td>
@@ -689,10 +689,10 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- TABLET CASE: EDICIÓN -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -733,7 +733,7 @@
 					</div>
 
 					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
-					
+
 					<div class="aligns" style="margin-bottom: 0;">
 						<a href="" class="sales-button white">VERTICAL</a>
 						<a href="" class="sales-button white">HORIZONTAL</a>
@@ -745,9 +745,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- TABLET CASE: CONDICIONES -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -768,7 +768,7 @@
 					<p class="subtitle">
 						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
 					</p>
-					
+
 					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
 						<tr>
 							<td><p class="title">TIPO DE CASE</p></td>
@@ -804,10 +804,10 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- ALMOHADAS: EDICIÓN -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -848,7 +848,7 @@
 					</div>
 
 					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
-					
+
 					<div class="aligns" style="margin-bottom: 0;">
 						<a href="" class="sales-button white">VERTICAL</a>
 						<a href="" class="sales-button white">HORIZONTAL</a>
@@ -860,9 +860,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- ALMOHADAS: CONDICIONES -->
-	<div class="grid-container">
+	<!-- <div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -883,7 +883,7 @@
 					<p class="subtitle">
 						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
 					</p>
-					
+
 					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
 						<tr>
 							<td><p class="title">TIPO DE CASE</p></td>
@@ -919,7 +919,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="grid-container">
 		<div class="grid-100">
@@ -933,12 +933,12 @@
 		</div>
 	</div>
 
-
-	<a id="go-share-modal" href="#share-modal">HOLI!</a>
+<!--
+	<a id="go-share-modal" href="#share-modal">HOLI!</a> -->
 
 	<div id="share-modal" style="display: none;">
 		<i class="closed-modal fa fa-times"></i>
-		
+
 		<div class="am-profile" style="padding: 0;">
 
 			<div class="grid-container" style="padding: 0;">
@@ -964,7 +964,7 @@
 									</a>
 								</p>
 							</div>
-								
+
 							<div class="grid-100 mobile-grid-100">
 								<button class="button upload green u-margin-top-40" data-color="green">CREAR PRODUCTOS</button>
 							</div>
@@ -986,6 +986,10 @@ $(function() {
 	$.cloudinary.config({{cloudinary.config()|json|safe}});
 	new APP.SellScreen();
 
+	$('.edit-btn').click(function(e){
+		e.preventDefault();
+		$('.grid-1').removeClass('hide');
+	});
 
 	$('#go-collection-modal').leanModal();
 	$('#go-share-modal').leanModal();
