--- a/app/views/errors/404.html
+++ b/app/views/errors/404.html
@@ -5,7 +5,7 @@
 	<div class="error-404" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065563/general/error-404.jpg')">
 		<div class="inner">
 			<p class="title">Error 404</p>
-			<p class="title">Lo setimos pagina no encontrada</p>
+			<p class="title">Lo sentimos página no encontrada</p>
 
 			<p class="desc">Pero existen cientos de obras aún por descubrir</p>
 			<a href="/works/category/all/page-1/">DESCRUBRIR OBRAS</a>
