--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -24,7 +24,7 @@
 
 						<div class="grid-50 mobile-grid-100">
 							<p class="title">País</p>
-							<select class="input select" name='gender'>
+							<select class="input select" name='country'>
 								<option disabled selected>Seleccionar País</option>
 								<option>Argentina</option>
 								<option>Bolivia</option>
@@ -43,31 +43,28 @@
 						</div>
 						<div class="grid-50 mobile-grid-100">
 							<p class="title">Ciudad</p>
-							<select class="input select" name='gender'>
-								<option disabled selected>Seleccionar ciudad</option>
-								<option>Ciudad 1</option>
-								<option>Ciudad 2</option>
-							</select>
+							<input class="input" name='city' value="" type="text" placeholder="Ingresa tu ciudad de residencia"/>
 						</div>
 
 						<div class="grid-50 mobile-grid-100">
 							<p class="title">Estado o provincia</p>
-							<input class="input" name='' value="" type="text" placeholder="Seleccionar Estado"/>
+							<input class="input" name='province' value="{{user.province}}" type="text" placeholder="Seleccionar Estado"/>
 						</div>
 						<div class="grid-50 mobile-grid-100">
 							<p class="title">Código postal</p>
-							<input class="input" name='' value="" type="text" placeholder="Ingresa código postal"/>
+							<input class="input" name='zipcode' value="{{user.zipcode}}" type="text" placeholder="Ingresa código postal"/>
 						</div>
 
 						<div class="grid-100">
 							<p class="title">Dirección de Envío</p>
-							<input class="input" type="text" value="" name='' placeholder="Dirección Línea 1"/>
+							<input class="input" type="text" value="{{user.direction}}" name='direction' placeholder="Dirección Línea 1"/>
 							<p class="title">Teléfono móvil</p>
-							<input class="input" type="text" value="" name='' placeholder="Ingresa el número de whatsapp"/>
+							<input class="input" type="text" value="{{user.phone}}" name='phone' placeholder="Ingresa el número de whatsapp"/>
 							<p class="title">Usuario Paypal</p>
-							<input class="input" type="text" value="" name='' placeholder="Ingresa el email de tu cuenta en paypal"/>
+							<input class="input" type="text" value="{{user.paypal}}" name='paypal' placeholder="Ingresa el email de tu cuenta en paypal"/>
 						</div>
 
+						{% if user.country  === 'Peru' %}
 						<div class="artist-data {% if !user.isArtist %} hide {%endif%}">
 							<div class="separator u-margin-top-40">
 								<span class="line"></span><span class="text">VENDEDORES EN PERÚ </span><span class="line"></span>
@@ -78,39 +75,41 @@
 							</div>
 
 							<div class="grid-50 mobile-grid-100">
-								<select class="input select" name=''>
-									<option value='1' checked>Seleccionar tipo</option>
-									<option value='2' >Nombre de artista</option>
+								<select class="input select" name='document'>
+									<option disabled selected>Seleccionar tipo</option>
+									<option>DNI</option>
+									<option>RUC</option>
 								</select>
 							</div>
 
 							<div class="grid-100 mobile-grid-100">
 								<p class="title">Nro de Documento</p>
-								<input class="input" type="text" value="" name='' placeholder="Ingresa un documento válido"/>
+								<input class="input" type="text" value="{{user.documentValue}}" name='documentValue' placeholder="Ingresa un documento válido"/>
 								<p class="title">Nombre completo/razón social</p>
-								<input class="input" type="text" value="" name='' placeholder="Ingresa un documento válido"/>
-
-								<p class="title">Acuerdos con el usuario</p>
-
-								<p class="subtitle">Cuando se vende una obra o producto en la plataforma, la venta ocurre entre tú y el comprador final. Arte Manifiesto funciona como tu agente. Para hacer esto, tienes que darnos permisos explícitos</p>
-
-								<table class="u-margin-top-20">
-									<tr>
-										<td><input type="checkbox" name="" value=""></td>
-										<td class="check-title">Acepto los <a href="#">términos y condiciones para vendedores</a> en la plataforma.</td>
-									</tr>
-								</table>
-
+								<input class="input" type="text" value="{{user.businessName}}" name='businessName' placeholder="Ingresa un documento válido"/>
 							</div>
-
 						</div>
+						{%endif%}
+						{% if !user.isSeller %}
+						<p class="title">Acuerdos con el usuario</p>
+
+						<p class="subtitle">Cuando se vende una obra o producto en la plataforma, la venta ocurre entre tú y el comprador final. Arte Manifiesto funciona como tu agente. Para hacer esto, tienes que darnos permisos explícitos</p>
+
+						<table class="u-margin-top-20">
+							<tr>
+								<td><input type="checkbox" name="terms" value=""></td>
+								<td class="check-title">Acepto los <a href="#">términos y condiciones para vendedores</a> en la plataforma.</td>
+							</tr>
+						</table>
+						{%endif%}
 						<div class="grid-100 mobile-grid-100">
 							<button class="button upload green u-margin-top-40" data-color="green">GUARDAR CAMBIOS</button>
 						</div>
-
-						<div class="grid-100 mobile-grid-100">
-							<button class="button upload red u-margin-top-40" data-color="green">ELIMINAR TIENDA</button>
-						</div>
+						{% if user.isSeller %}
+							<div class="grid-100 mobile-grid-100">
+								<a class="button upload red u-margin-top-40 delete-store" data-color="green">DESACTIVAR TIENDA</a>
+							</div>
+						{%endif%}
 
 						<div class="grid-100 save-loading hide mobile-grid-100">
 							<button class="button u-margin-top-40" data-color="green"><i class="load fa fa-spinner"></i></button>
@@ -165,9 +164,12 @@
 
 {% endblock %}
 {% block scripts %}
+<script src='//maps.googleapis.com/maps/api/js?sensor=false&libraries=places'></script>
 <script>
 $(function() {
 	$('.seller').addClass('selected');
+
+	new APP.AccountSellerScreen();
 });
 </script>
 	<!-- $('.') -->
